# mycpu

./: CMakeLists.txt  README.md  package-lock.json  run.txt  start.bat  要求.txt
docs/: PPT生成提示词.md  傻瓜式教程-答辩版.md  开题报告.md  开题报告1.aux  开题报告1.out  开题报告1.tex  开题报告1.toc  技术文档.md
game/: addr_check_demo.s  dino_game.s  m_ext_test.s  matmul_rv32i.s  matmul_rv32im.s  pipeline_demo.s  uart_demo.s
include/: Constants.h  Types.h
src/: main.cpp
src/assembler/: Assembler.cpp  Assembler.h
src/bus/: Bus.cpp  Bus.h
src/cpu/: CPU.cpp  CPU.h  CpuCore.h  CsrFile.cpp  CsrFile.h  Decoder.cpp  Decoder.h  PipelinedCPU.cpp  PipelinedCPU.h  RegisterFile.cpp  RegisterFile.h  TrapHandler.cpp  TrapHandler.h
src/devices/: Device.cpp  Device.h
src/elf/: ElfLoader.cpp  ElfLoader.h
src/memory/: Memory.cpp  Memory.h
src/rpc/: RpcServer.cpp  RpcServer.h
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  DinoGame.jsx  index.css
